[gd_scene load_steps=9 format=2]

[ext_resource path="res://Assets/door/booropen.png" type="Texture" id=1]
[ext_resource path="res://Assets/door/boor.png" type="Texture" id=2]
[ext_resource path="res://Assets/Actions/action key.png" type="Texture" id=3]
[ext_resource path="res://Assets/Actions/action key2.png" type="Texture" id=4]
[ext_resource path="res://Assets/door/Door.gd" type="Script" id=5]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 141.082, 77.9577 )

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "open",
"speed": 5.0
}, {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "closed",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ ExtResource( 3 ), ExtResource( 4 ) ],
"loop": true,
"name": "act",
"speed": 3.0
} ]

[node name="Door" type="Area2D"]
pause_mode = 2
script = ExtResource( 5 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="DoorSprite" type="AnimatedSprite" parent="."]
scale = Vector2( 5, 5 )
frames = SubResource( 2 )
animation = "closed"

[node name="ActionSprite" type="AnimatedSprite" parent="."]
visible = false
position = Vector2( 88, -40 )
scale = Vector2( 5, 5 )
frames = SubResource( 3 )
animation = "act"
playing = true

[node name="LoadTimer" type="Timer" parent="."]
wait_time = 0.4

[connection signal="body_entered" from="." to="." method="_on_Door_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_Door_body_exited"]
[connection signal="timeout" from="LoadTimer" to="." method="_on_LoadTimer_timeout"]
